--- a/.buildfiles/etc/Makefile.in
+++ b/.buildfiles/etc/Makefile.in
@@ -23,7 +23,7 @@ devclean: distclean
 
 install:
 	$(INSTALL) -m 775 $(INSTALL_OPTS) -d $(DESTDIR)$(CFGDIR)
-	$(INSTALL) -m 664 $(INSTALL_OPTS) nagios-bp.conf-sample $(DESTDIR)$(CFGDIR)
-	$(INSTALL) -m 664 $(INSTALL_OPTS) ndo.cfg-sample $(DESTDIR)$(CFGDIR)
+	$(INSTALL) -m 664 $(INSTALL_OPTS) business-processes.conf-sample $(DESTDIR)$(CFGDIR)
+	$(INSTALL) -m 664 $(INSTALL_OPTS) dataBackend.cfg-sample $(DESTDIR)$(CFGDIR)
 	$(INSTALL) -m 664 $(INSTALL_OPTS) settings.cfg $(DESTDIR)$(CFGDIR)
 
