--- a/.buildfiles/etc/apache-conf.d/Makefile.in
+++ b/.buildfiles/etc/apache-conf.d/Makefile.in
@@ -24,5 +24,5 @@ devclean: distclean
 
 install:
 	$(INSTALL) -m 775 $(INSTALL_OPTS) -d $(DESTDIR)$(HTTPD_CONF)
-	$(INSTALL) -m 664 $(INSTALL_OPTS) nagiosbp.conf $(DESTDIR)$(HTTPD_CONF)
+	$(INSTALL) -m 664 $(INSTALL_OPTS) bp-addon.conf $(DESTDIR)$(HTTPD_CONF)
 
