changed file header to to represent project renaming

--- a/etc/business-processes.conf
+++ b/etc/business-processes.conf
@@ -1,9 +1,9 @@
 ########################################################################################################################
 # 
-# configuration file for Nagios Business Processes
+# configuration file for Business Processes
 # Syntax description see README
 # THIS IS AN EXAMPLE
-# You have to define Your own processes using services defined in Your Nagios configuration
+# You have to define Your own processes using services defined in Your Nagios or Icinga configuration
 #
 ########################################################################################################################
 
