made old urls working again by adding redirects

--- a/etc/apache-conf.d/bp-addon.conf.in
+++ b/etc/apache-conf.d/bp-addon.conf.in
@@ -26,3 +26,8 @@ Alias @htmurl@ "@datarootdir@"
 
 RedirectMatch ^@htmurl@/?$ @cgiurl@/bp-addon.cgi
 
+Redirect /nagiosbp/cgi-bin/nagios-bp.cgi @cgiurl@/bp-addon.cgi
+Redirect /nagiosbp/cgi-bin/whereUsed.cgi @cgiurl@/whereUsed.cgi
+RedirectMatch ^/nagiosbp$ @cgiurl@/bp-addon.cgi
+RedirectMatch ^/nagiosbp/(.*)$ @htmurl@/$1
+
