--- a/.buildfiles/share/stylesheets/Makefile.in
+++ b/.buildfiles/share/stylesheets/Makefile.in
@@ -23,7 +23,7 @@ distclean: clean
 devclean: distclean
 
 install:
-	$(INSTALL) -m 775 $(INSTALL_OPTS) -d $(DATADIR)/stylesheets
+	$(INSTALL) -m 775 $(INSTALL_OPTS) -d $(DESTDIR)$(DATADIR)/stylesheets
 	for file in ./*.css; \
-	do $(INSTALL) -m 664 $(INSTALL_OPTS) $$file $(DATADIR)/stylesheets; done
-	${TOUCH} $(DATADIR)/stylesheets/user.css
+	do $(INSTALL) -m 664 $(INSTALL_OPTS) $$file $(DESTDIR)$(DATADIR)/stylesheets; done
+	${TOUCH} $(DESTDIR)$(DATADIR)/stylesheets/user.css
