fixed bug 2010_020: UNKNOWN status was not handled correcty in all situations in function x_of_y (min .. of)

--- a/etc/business-processes-second-view.conf
+++ b/etc/business-processes-second-view.conf
@@ -15,9 +15,9 @@ testsystem2-1_websrv2 = webserver2;HTTP & webserver2;HTTPD Slots
 testsystem2-1_webservers = testsystem2-1_websrv1 | testsystem2-1_websrv2
 
 testsystem2-1 = dummyhost;dummyservice & testsystem2-1_webservers
-testsystem2-2 = dummyhost;dummyservice
+testsystem2-2 = webserver1;HTTP & webserver1;HTTPD Slots & webserver2;HTTP & webserver2;HTTPD Slots & dummyhost;dummyservice
 testsystem2-3 = dummyhost;ProzessKomponente online & dummyhost;Switchport 14/6
-testsystem2-4 = 2 of: webserver1;HTTP + webserver1;HTTPD Slots + webserver2;HTTP + webserver2;HTTPD Slots
+testsystem2-4 = 2 of: webserver1;HTTP + webserver1;HTTPD Slots + webserver2;HTTP + webserver2;HTTPD Slots + dummyhost;dummyservice
 
 display 5;testsystem2-1;Testsystem 2.1
 display 5;testsystem2-2;Testsystem 2.2
