initial version of check_cluster_generic.pl

--- a/.buildfiles/libexec/Makefile.in
+++ b/.buildfiles/libexec/Makefile.in
@@ -25,4 +25,5 @@ devclean: distclean
 install:
 	$(INSTALL) -m 775 $(INSTALL_OPTS) -d $(DESTDIR)$(LIBEXECDIR)
 	$(INSTALL) -m 755 $(INSTALL_OPTS) check_bp_status.pl $(DESTDIR)$(LIBEXECDIR)
+	$(INSTALL) -m 755 $(INSTALL_OPTS) check_cluster_generic.pl $(DESTDIR)$(LIBEXECDIR)
 
