modifications for better compliance with debian guidelines: removed .pl filename extension and different directory structure for cache files

--- a/.buildfiles/Makefile.in
+++ b/.buildfiles/Makefile.in
@@ -74,8 +74,9 @@ clean:
 	cd $(SRC_LIBS) && $(MAKE) $@
 	cd $(SRC_SHARE) && $(MAKE) $@
 	cd $(SRC_SHARE)/stylesheets && $(MAKE) $@
-	cd $(SRC_VAR)/bp-addon.sessions && $(MAKE) $@
 	cd $(SRC_VAR)/cache && $(MAKE) $@
+	cd $(SRC_VAR)/cache/sessions && $(MAKE) $@
+	cd $(SRC_VAR)/cache/backend && $(MAKE) $@
 	-rm -f *.cfg core
 	-rm -f *~ *.*~ */*~ */*.*~
 	-rm -f config.log config.status config.cache
@@ -91,8 +92,9 @@ distclean:
 	cd $(SRC_LIBS) && $(MAKE) $@
 	cd $(SRC_SHARE) && $(MAKE) $@
 	cd $(SRC_SHARE)/stylesheets && $(MAKE) $@
-	cd $(SRC_VAR)/bp-addon.sessions && $(MAKE) $@
 	cd $(SRC_VAR)/cache && $(MAKE) $@
+	cd $(SRC_VAR)/cache/sessions && $(MAKE) $@
+	cd $(SRC_VAR)/cache/backend && $(MAKE) $@
 	rm -f Makefile config.status config.log subst
 
 devclean: distclean
@@ -125,8 +127,9 @@ install:
 	cd $(SRC_LIBS) && $(MAKE) $@
 	cd $(SRC_SHARE) && $(MAKE) $@
 	cd $(SRC_SHARE)/stylesheets && $(MAKE) $@
-	cd $(SRC_VAR)/bp-addon.sessions && $(MAKE) $@
 	cd $(SRC_VAR)/cache && $(MAKE) $@
+	cd $(SRC_VAR)/cache/sessions && $(MAKE) $@
+	cd $(SRC_VAR)/cache/backend && $(MAKE) $@
 	cd $(SRC_BIN) && $(MAKE) $@
 	$(INSTALL) -m 644 $(INSTALL_OPTS) README  $(DESTDIR)$(exec_prefix)
 	$(INSTALL) -m 644 $(INSTALL_OPTS) AUTHORS $(DESTDIR)$(exec_prefix)
