--- a/.buildfiles/Makefile.in
+++ b/.buildfiles/Makefile.in
@@ -78,7 +78,7 @@ clean:
 	cd $(SRC_VAR)/cache && $(MAKE) $@
 	cd $(SRC_VAR)/cache/sessions && $(MAKE) $@
 	cd $(SRC_VAR)/cache/backend && $(MAKE) $@
-	cd $(SRC_MAN)/cache && $(MAKE) $@
+	cd $(SRC_MAN) && $(MAKE) $@
 	-rm -f *.cfg core
 	-rm -f *~ *.*~ */*~ */*.*~
 	-rm -f config.log config.status config.cache
@@ -97,7 +97,7 @@ distclean:
 	cd $(SRC_VAR)/cache && $(MAKE) $@
 	cd $(SRC_VAR)/cache/sessions && $(MAKE) $@
 	cd $(SRC_VAR)/cache/backend && $(MAKE) $@
-	cd $(SRC_MAN)/cache && $(MAKE) $@
+	cd $(SRC_MAN) && $(MAKE) $@
 	rm -f Makefile config.status config.log subst
 
 devclean: distclean
@@ -133,7 +133,7 @@ install:
 	cd $(SRC_VAR)/cache && $(MAKE) $@
 	cd $(SRC_VAR)/cache/sessions && $(MAKE) $@
 	cd $(SRC_VAR)/cache/backend && $(MAKE) $@
-	cd $(SRC_MAN)/cache && $(MAKE) $@
+	cd $(SRC_MAN) && $(MAKE) $@
 	cd $(SRC_BIN) && $(MAKE) $@
 	$(INSTALL) -m 644 $(INSTALL_OPTS) README  $(DESTDIR)$(exec_prefix)
 	$(INSTALL) -m 644 $(INSTALL_OPTS) AUTHORS $(DESTDIR)$(exec_prefix)
